[project]
name = "myob-mcp-server"
version = "0.1.0"
description = "MCP server for MYOB AccountRight Live API"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
myob-mcp-server = "myob_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myob_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
